DEVOPS-1 #IN-PROGRESS move DEVOPS-1 from TO-DO to IN-PROGRESS

--- a/ReadMe
+++ b/ReadMe
@@ -1,3 +1,7 @@
 Hi Abhishek, 
 
-This is commit on Developement branch
+This is commit on Developement branch.
+
+move DEVOPS-1 from TO-DO to IN-PROGRESS
+
+DEVOPS-1 #IN-PROGRESS move DEVOPS-1 from TO-DO to IN-PROGRESS
