DEVOPS-1 #DONE move DEVOPS-1 from IN-PROGRESS to DONE

--- a/ReadMe
+++ b/ReadMe
@@ -5,3 +5,5 @@ This is commit on Developement branch.
 move DEVOPS-1 from TO-DO to IN-PROGRESS
 
 DEVOPS-1 #IN-PROGRESS move DEVOPS-1 from TO-DO to IN-PROGRESS
+
+DEVOPS-1 #DONE move DEVOPS-1 from IN-PROGRESS to DONE
