--- a/ReadMe
+++ b/ReadMe
@@ -7,3 +7,5 @@ move DEVOPS-1 from TO-DO to IN-PROGRESS
 DEVOPS-1 #IN-PROGRESS move DEVOPS-1 from TO-DO to IN-PROGRESS
 
 DEVOPS-1 #DONE move DEVOPS-1 from IN-PROGRESS to DONE
+
+move DEVOPS-3 from TO-DO to IN-PROGRESS
