--- a/ReadMe
+++ b/ReadMe
@@ -9,3 +9,5 @@ DEVOPS-1 #IN-PROGRESS move DEVOPS-1 from TO-DO to IN-PROGRESS
 DEVOPS-1 #DONE move DEVOPS-1 from IN-PROGRESS to DONE
 
 move DEVOPS-3 from TO-DO to IN-PROGRESS
+
+DEVOPS-3 #DONE move DEVOPS-3 from IN-PROGRESS to DONE
