Added content to show demo from IDE

--- a/ReadMe
+++ b/ReadMe
@@ -11,3 +11,5 @@ DEVOPS-1 #DONE move DEVOPS-1 from IN-PROGRESS to DONE
 move DEVOPS-3 from TO-DO to IN-PROGRESS
 
 DEVOPS-3 #DONE move DEVOPS-3 from IN-PROGRESS to DONE
+
+Added content to show demo from IDE
