Added content to show demo from IDE1-demo

--- a/ReadMe
+++ b/ReadMe
@@ -13,3 +13,4 @@ move DEVOPS-3 from TO-DO to IN-PROGRESS
 DEVOPS-3 #DONE move DEVOPS-3 from IN-PROGRESS to DONE
 
 Added content to show demo from IDE
+Added content to show demo from IDE1
